src/objects/loan__Loan_Account__c.object
<CustomObject>
    <description>Lending Account</description>
    <fields>
        <fullName>Available_Credit__c</fullName>
        <formula>If(loan__Credit_Limit_Current__c != null,(loan__Credit_Limit_Current__c -  loan__Principal_Remaining__c),( loan__Credit_Limit__c -  loan__Principal_Remaining__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrower_Email__c</fullName>
        <formula>loan__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Originated_From__c</fullName>
        <label>Contract Originated From</label>
        <picklist>
            <picklistValues>
                <fullName>Organic Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Referrer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Type__c</fullName>
        <label>Credit Score Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Credit Score of Borrower at the time of loan contract creation.</inlineHelpText>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status (Equifax Reporting)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delinquent_Amount_Snapshot__c</fullName>
        <label>First Delinquency Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delinquent_Fields_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delinquent Fields Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fraudulent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraudulent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_PA__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Loan APR</inlineHelpText>
        <label>Interest Rate PA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_PM__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Interest Rate per month (PA/12)</inlineHelpText>
        <label>Interest Rate PM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_APR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Loan APR</inlineHelpText>
        <label>Loan APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CL Contracts (Partner)</relationshipLabel>
        <relationshipName>CL_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receivables__c</fullName>
        <formula>loan__Principal_Remaining__c +  loan__Interest_Remaining__c +  loan__Fees_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receivables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recoveries__c</fullName>
        <formula>IF(NOT( loan__Charged_Off_Date__c  &lt;&gt; NULL) , loan__Charged_Off_Fees__c +  loan__Charged_Off_Interest__c +  loan__Charged_Off_Principal__c -  loan__Principal_Remaining__c -  loan__Interest_Remaining__c -  loan__Fees_Remaining__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recoveries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Charge_Off__c</fullName>
        <formula>loan__Charged_Off_Fees__c +  loan__Charged_Off_Interest__c +  loan__Charged_Off_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Charge Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Net_ChargeOff__c</fullName>
        <formula>IF(NOT( loan__Charged_Off_Date__c &lt;&gt; NULL) ,  loan__Principal_Remaining__c +  loan__Interest_Remaining__c +  loan__Fees_Remaining__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net ChargeOff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payable__c</fullName>
        <description>This is total payable amount which is sum of loan credit limit +estimated loan interest</description>
        <formula>(loan__Credit_Limit__c) + 
((loan__Credit_Limit__c * loan__Interest_Rate__c * ( loan__Term_Cur__c * 30)) / (IF( ISPICKVAL(loan__Time_Counting_Method__c,&apos;Actual Days&apos;),365,360)))</formula>
        <label>Total Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_payments__c</fullName>
        <label>Total payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>age_of_account__c</fullName>
        <formula>(YEAR(Today() )*12+MONTH(Today() ))-
(YEAR( loan__Disbursal_Date__c )*12+MONTH(loan__Disbursal_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Account_Number__c</fullName>
        <description>Account number</description>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Account_Type__c</fullName>
        <description>Account type: Saving or checking</description>
        <label>ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Bank_Name__c</fullName>
        <description>Bank name</description>
        <inlineHelpText>Name of the bank</inlineHelpText>
        <label>ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Bank__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>ACH Bank is the bank that processes the NACHA file.</inlineHelpText>
        <label>ACH Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Debit_Amount__c</fullName>
        <description>Debit amount</description>
        <inlineHelpText>Debit amount</inlineHelpText>
        <label>ACH Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Drawer_Name__c</fullName>
        <description>ACH Drawer Name</description>
        <inlineHelpText>ACH Drawer Name</inlineHelpText>
        <label>ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_End_Date__c</fullName>
        <label>ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Frequency__c</fullName>
        <label>ACH Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly-PD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Next_Debit_Date__c</fullName>
        <inlineHelpText>It is the next date on which the installment amount will be deducted from the borrower&apos;s account.</inlineHelpText>
        <label>ACH Next Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is ACH on for this account</description>
        <inlineHelpText>ACH (Automated Clearing House) is an electronic funds-transfer system. This payment system deals with payroll, direct deposit, tax refunds, consumer bills, tax payments to name a few.</inlineHelpText>
        <label>ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Relationship_Type__c</fullName>
        <description>ACH relationship type</description>
        <label>ACH Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2 Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Routing_Number__c</fullName>
        <description>Routing number</description>
        <inlineHelpText>ACH routing number is a nine digit number used to clear electronic transactions to and from your bank account.</inlineHelpText>
        <label>ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Second_Debit_Date__c</fullName>
        <label>ACH Second Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Start_Date__c</fullName>
        <label>ACH Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__APR__c</fullName>
        <inlineHelpText>Annual Percentage Rate</inlineHelpText>
        <label>APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please choose a account, which will be associated as a customer on this lending account.
You can create a new account, from the lookup window by clicking on new or select the existing account from the lookup.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Date__c</fullName>
        <description>The date from which interest accrual starts</description>
        <inlineHelpText>The date from which interest accrual starts</inlineHelpText>
        <label>Accrual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accrual Start Days after the loan effective date.</description>
        <inlineHelpText>Number of Days after the Contract Date from When the Interest Accrual will Start.</inlineHelpText>
        <label>Accrual Start Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Stop_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Accrual needs to be stopped.</description>
        <inlineHelpText>Indicates if the accrual has to be stopped.</inlineHelpText>
        <label>Accrual Stop Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Accrue_Past_Maturity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if interest accrual should happen after maturity.</description>
        <inlineHelpText>If this is unchecked, then the account will stop accruing interest post maturity.</inlineHelpText>
        <label>Accrue Past Maturity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Ach_Debit_Day__c</fullName>
        <description>Debit day for ACH payment</description>
        <inlineHelpText>Ach Debit Day</inlineHelpText>
        <label>ACH Debit Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Active_Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if there is an active investor on the lending account.</description>
        <inlineHelpText>This flag will becomes checked if there is any active investor on this lending account. This flag should not be changed by user manually.</inlineHelpText>
        <label>Active Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Additional_Loan_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>This amount  is added to the total refinanced amount to get the total loan amount for a Refinance Contract.</inlineHelpText>
        <label>Additional Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Aging__c</fullName>
        <formula>IF(AND(loan__Number_of_Days_Overdue__c&gt;0,loan__Number_of_Days_Overdue__c&lt;=30), &quot;0-30&quot;, IF(AND(loan__Number_of_Days_Overdue__c&gt;30,loan__Number_of_Days_Overdue__c&lt;=60),&quot;31-60&quot;,
IF(AND(loan__Number_of_Days_Overdue__c&gt;60,loan__Number_of_Days_Overdue__c&lt;=90),&quot;61-90&quot;,
IF(AND(loan__Number_of_Days_Overdue__c&gt;90,loan__Number_of_Days_Overdue__c&lt;=120),&quot;91-120&quot;,
IF(AND(loan__Number_of_Days_Overdue__c&gt;120,loan__Number_of_Days_Overdue__c&lt;=180),&quot;121-180&quot;,
IF(loan__Number_of_Days_Overdue__c&gt;180,&quot;180+&quot;,
&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It is used to determine whether a company carries overdue debtors that may never repay their bills.</inlineHelpText>
        <label>Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Amortization_Schedule_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag is set to true when the amortization schedule is successfully generated for a contract with Funding In Tranches as &apos;Yes&apos; .</inlineHelpText>
        <label>Amortization Schedule Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amount_to_Current__c</fullName>
        <formula>loan__Delinquent_Amount__c +   IF(loan__Delinquent_Amount__c==0, 0, loan__Fees_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This includes delinquent amount + any unpaid fees on the account.</inlineHelpText>
        <label>Amount to Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Application Received Date.</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <inlineHelpText>The date on which the loan is approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Auto_Create_Excess_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Excess Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Average_Monthly_Income__c</fullName>
        <label>Average Monthly Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Balloon_Payment__c</fullName>
        <inlineHelpText>Heavy payment at the end of a loan payment schedule.</inlineHelpText>
        <label>Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Borrower_ACH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Borrower ACH</description>
        <inlineHelpText>Borrower ACH</inlineHelpText>
        <label>Borrower ACH</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipName>Lending</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The branch name of the loan account.</inlineHelpText>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Change_Recurring_ACH_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Recurring ACH Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Date__c</fullName>
        <inlineHelpText>Date on which the account was charged off.</inlineHelpText>
        <label>Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Charged off Fees Balance.</inlineHelpText>
        <label>Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Charged off Interest Balance.</inlineHelpText>
        <label>Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Charged off Principal/Advance Balance.</inlineHelpText>
        <label>Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Cleared_Disbursal_Txn_Count__c</fullName>
        <label>Cleared Disbursal Txn Count</label>
        <summaryFilterItems>
            <field>loan__Loan_Disbursal_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Loan_Disbursal_Transaction__c.loan__Reversed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Loan_Disbursal_Transaction__c.loan__Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Account Owner</description>
        <inlineHelpText>Loan Account Owner</inlineHelpText>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Closed_Date__c</fullName>
        <inlineHelpText>The date when the loan was closed</inlineHelpText>
        <label>Paid Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Co_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co Applicant</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipName>Loan_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Notes__c</fullName>
        <description>Collateral Notes</description>
        <inlineHelpText>Collateral Notes</inlineHelpText>
        <label>Collateral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Asset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please choose a contact, which will be associated as a customer on this lending account. 
You can create a new contact, from the lookup window by clicking on new or select the existing contact from the lookup.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contract_Type__c</fullName>
        <inlineHelpText>Contract Type - New or Refinance</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Due_Day__c</fullName>
        <inlineHelpText>Day on which customer will be due on billing cycle.</inlineHelpText>
        <label>Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Index_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Index Rate at the time of Contract</inlineHelpText>
        <label>Index Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Interest_Rate__c</fullName>
        <inlineHelpText>Contractual Interest Rate on the contract.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Credit_Limit_Current__c</fullName>
        <description>Current Credit Limit for Line of Credit</description>
        <inlineHelpText>This is the current maximum advance limit and can differ from contractual credit limit if the user decide to change the credit limit for the customer.
Total advance withdrawn must not exceed this limit at any point of time.</inlineHelpText>
        <label>Current Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Credit_Limit__c</fullName>
        <description>Credit Limit for Line of Credit</description>
        <inlineHelpText>This is the contractual maximum advance limit, total advance withdrawn must not exceed this limit.</inlineHelpText>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Servicing Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Staff__c.loan__Branch__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Branch__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipName>Loan_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Current_MCA_Fraction_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current MCA Fraction Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Delinquency_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>It is the number of days for which the system will wait before categorizing the account as a delinquent account.</inlineHelpText>
        <label>Delinquency Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Delinquent_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Unpaid bills/invoices amount on this account.</inlineHelpText>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Disbursal_Amount__c</fullName>
        <description>Disbursal Amount</description>
        <inlineHelpText>Amount to be disbursed to the borrower</inlineHelpText>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Disbursal_Date__c</fullName>
        <description>Contract Date on the Loan account, this will be updated at the time of funding with the Expected Disbursal Date.</description>
        <inlineHelpText>Contract date on the loan. This will be updated at the time of funding with the expected disbursal date.</inlineHelpText>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Disbursal_Status__c</fullName>
        <description>Disbursal Status</description>
        <inlineHelpText>Loan Disbursal Status</inlineHelpText>
        <label>Disbursal Status</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Pending Disbursal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Disbursed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Disbursed_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Disbursed Amount</description>
        <inlineHelpText>Total amount disbursed/funded to the borrower</inlineHelpText>
        <label>Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Discount_Applied_On__c</fullName>
        <label>Discount Applied On</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This discount will be used at the time of paying off of amortization based loans.</description>
        <inlineHelpText>This discount will be used at the time of paying off of amortization based loans.</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Discounting_Based_Payoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discounting Based Payoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Billing_Method__c</fullName>
        <inlineHelpText>Billing Method to be used for generating dues during the Draw Term/Period.</inlineHelpText>
        <label>Draw Billing Method</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Of Remaining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Plus Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Period_Billing_Method__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Draw Period Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Period_End_Date__c</fullName>
        <description>Draw Period End Date</description>
        <inlineHelpText>Draw Period End Date is the date for the full/final disbursement</inlineHelpText>
        <label>Draw Period End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>